--- a/config.json
+++ b/config.json
@@ -1,9 +1,5 @@
 {
-    "domain": "fa24-cs425-2901.cs.illinois.edu",
-    "memberlist": {
-        "alive": [
-            ["fa24-cs425-2901.cs.illinois.edu", "8080", "v0", "-1"]
-        ],
-        "failed": []
-    }
+    "domain": "fa24-cs425-2902.cs.illinois.edu",
+    "port": "8080",
+    "introducer": "fa24-cs425-2901.cs.illinois.edu"
 }
